[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-polygons"
version = "1.0.1"

dependencies = [
    "sqlalchemy>=2.0.0",
    "rtree>=1.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0"
]

authors = [
    { name = "Mipa"}
]

description = "Polygons - a territory protection system for Endstone & LeviLamina."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "polygons"]

[project.urls]
Homepage = "https://github.com/MipaSenpai/Polygons"

[project.entry-points."endstone"]
polygons = "endstone_polygons:Polygons"